tests/snapshots/integration__integration_tests__switch__switch_execute_multiline.snap
---
source: tests/integration_tests/switch.rs
info:
  program: wt
  args:
    - switch
    - "--create"
    - multiline-test
    - "--execute"
    - "echo 'line1'\necho 'line2'\necho 'line3'"
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmp2CpQIq/test-config.toml
---
success: true
exit_code: 0
----- stdout -----
✅ [32mCreated new worktree for [1m[32mmultiline-test[0m at [REPO].multiline-test[0m
🔄 [36mExecuting (--execute):[0m
[40m [0m echo 'line1'
[40m [0m echo 'line2'
[40m [0m echo 'line3'


----- stderr -----
line1
line2
line3
